--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,7 +49,8 @@ javac.classpath=\
     ${file.reference.javase-3.4.1.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.flatlaf-demo-3.6.jar}
+    ${file.reference.flatlaf-demo-3.6.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
